--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>michael henrick osma</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -27,13 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style2.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Updated: Jan 29 2024 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -396,19 +390,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Secaucus, New Jersey</p>
+                <p>Parts Unknown</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>mhosma24@yahoo.com</p>
+                <p>contact@mhosma.github.io</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 201.618.8295</p>
+                <p>+1 XXX.XXX.XXXX</p>
               </div>
 
             </div>
