--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <h4>ADP MAS Insight</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
 				  <a href="adp-mas-jan-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -259,7 +259,7 @@
                 <h4>H2O vs Simple</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -272,7 +272,7 @@
                 <h4>H2O vs Simple</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/h2o-6gb-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-6gb-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -285,7 +285,7 @@
                 <h4>H2O No Contract</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -338,7 +338,7 @@
                 <h4>H2O Shake Up</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/h2o-2gb-for-10-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-2gb-for-10-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -351,7 +351,7 @@
                 <h4>H2O Wireless</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/h2o-50-off-holiday-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-50-off-holiday-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
