--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h4>H2O Prices Slashed</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://media.githubusercontent.com/media/mhosma/mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/mhosma/mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -176,7 +176,7 @@
                 <h4>Prepaid Expo</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/mhosma/mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
 				  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
