--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
                 <h4>Prepaid Expo</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://github.com/mhosma/mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <video controls="" width="800" height="500" muted="" loop="" autoplay="">
+<source src="https://github.com/mhosma/mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" type="video/mp4">
+</video>
+<a href="https://github.com/mhosma/mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
 				  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
