--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h4>H2O Prices Slashed</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://github.com/mhosma/mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://vimeo.com/472332552" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -203,7 +203,7 @@
                 <h4>ADP MAS Insight</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://vimeo.com/837007918" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
 				  <a href="adp-mas-jan-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -259,7 +259,7 @@
                 <h4>H2O vs Simple</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://vimeo.com/475619074" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -285,7 +285,7 @@
                 <h4>H2O No Contract</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://vimeo.com/471547714" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
