--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <h4>H2O No Contract</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://vimeo.com/471547714" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
