--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h4>H2O Prices Slashed</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
                 </div>
               </div>
             </div>
