--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h4>ADP Growth Marketing</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="adp-growth-marketing-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/adp-growth-marketing.mp4" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
