--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h4>H2O Prices Slashed</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i>></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i>></a>
                 </div>
               </div>
             </div>
@@ -176,7 +176,7 @@
                 <h4>Prepaid Expo</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
- 			<a href="https://mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+ 			<a href="https://mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -202,7 +202,7 @@
                 <h4>ADP MAS Insight</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -257,7 +257,7 @@
                 <h4>H2O vs Simple</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -270,7 +270,7 @@
                 <h4>H2O vs Simple</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-6gb-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-6gb-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -283,7 +283,7 @@
                 <h4>H2O No Contract</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -349,7 +349,7 @@
                 <h4>H2O Wireless</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-50-off-holiday-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-50-off-holiday-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
