--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <h4>H2O Prices Slashed</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i>></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-prices-slashed-50off-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="H2O Prices Slashed At 50% OFF :: Role: Creative Direction, Animation"><i class="bx bx-plus"></i>></a>
                 </div>
               </div>
             </div>
@@ -123,7 +123,7 @@
                 <h4>ADP Growth Marketing</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/adp-growth-marketing.mp4" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/adp-growth-marketing.mp4" class="portfolio-details-lightbox" data-glightbox="type: external" title="ADP Growth Marketing Video :: Role: Art Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -176,7 +176,7 @@
                 <h4>Prepaid Expo</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
- 			<a href="https://mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+ 			<a href="https://mhosma.github.io/assets/videos/prepaid-expo-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Locus Telecommunications - Prepaid Expo Video :: Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -202,7 +202,7 @@
                 <h4>ADP MAS Insight</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/adp-mas-jan-insight-1.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ADP MAS January Ads - Insight (HTML5 Ads) :: Role: Art Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -257,7 +257,7 @@
                 <h4>H2O vs Simple</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-vs-simple-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="H2O vs Simple :: Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -267,10 +267,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/preview/h2o-6gb-for-30.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>H2O vs Simple</h4>
+                <h4>H2O Countdown To Savings</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-6gb-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-6gb-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="H2O Countdown To Savings:: Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -283,7 +283,7 @@
                 <h4>H2O No Contract</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-no-contract-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="H2O No Contract $9 Plan :: Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -336,7 +336,7 @@
                 <h4>H2O Shake Up</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-2gb-for-10-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-2gb-for-10-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="H2O It's Time To Shake Up Your Wireless :: Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -346,10 +346,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/preview/h2o-50off-holiday.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>H2O Wireless</h4>
+                <h4>H2O 50% OFF Holidays</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-50-off-holiday-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-50-off-holiday-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox" title="H2O 50% OFF All Unlimited with Code: HOLIDAY :: Role: Creative Direction, Animation"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
