--- a/h2o-welcome-pack-details.html
+++ b/h2o-welcome-pack-details.html
@@ -27,13 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: MyResume
-  * Updated: Jan 29 2024 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -73,19 +66,16 @@
 
           <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>H2O Welcome Pack</h3>
               <ul>
-                <li><strong>Category</strong>: Web Design</li>
-                <li><strong>Client</strong>: ADP</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">https://www.adp.com/what-we-offer/benefits/retirement/secure-2.aspx</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
+				<li><strong>Role</strong>: Creative Direction, Graphic Design, Print Production</li>
+				<li>&nbsp;</li>
+	 <!--			<li>         
+					<p>
                 Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
+	</li>-->
+              </ul>
             </div>
           </div>
 
