--- a/adp-golf-ambassador-details.html
+++ b/adp-golf-ambassador-details.html
@@ -54,6 +54,10 @@
 				<div class="swiper-slide">
                   <img src="assets/img/portfolio/adp-secure-20-page-mockup-2.jpg" alt="ADP Golf Ambassadors Page Mock-Ups - Desktop and Mobile">
                 </div>
+				  
+				<div class="swiper-slide">
+                  <img src="assets/img/portfolio/adp-secure-20-page-mockup-3.jpg" alt="ADP Golf Ambassadors Page Mock-Ups - Desktop and Mobile">
+                </div>
 
               </div>
               <div class="swiper-pagination"></div>
