--- a/index.html
+++ b/index.html
@@ -222,6 +222,19 @@
 			
 		  <div class="col-lg-4 col-md-6 portfolio-item filter-digital">
             <div class="portfolio-wrap">
+              <img src="assets/img/preview/adp-talent-article-preview.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ADP Downloadable Articles</h4>
+                <p>Digital</p>
+				<div class="portfolio-links">
+                  <a href="adp-articles-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+			
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-digital">
+            <div class="portfolio-wrap">
               <img src="assets/img/preview/h2o-direct-email-preview.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>H2O Direct E-mails</h4>
