--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/preview/adp-talent-article-preview.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ADP Downloadable Articles</h4>
-                <p>Digital</p>
+                <h4>ADP Articles</h4>
+                <p>Web</p>
 				<div class="portfolio-links">
                   <a href="adp-articles-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
                 </div>
