--- a/locustelecom-details.html
+++ b/locustelecom-details.html
@@ -66,7 +66,7 @@
 
           <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>Locus Telcom Corporate Website</h3>
+              <h3>Locus Telecom Corporate Website</h3>
               <ul>
                 <li><strong>Role</strong>: Art Direction, UI/UX, Web Design, Digital Assets, Front-End Development (HTML, CSS, Javascript)</li>
 				<li>&nbsp;</li>
