--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Over the years, I had the opportunity to work on many exciting projects in different mediums including print &amp; digital collaterals, websites, e-mails, videos and animations. Below are some samples of my work.</p><br>
+          <p>Over the years, I have had the opportunity to work on many exciting projects in different mediums including print &amp; digital collaterals, websites, e-mails, videos and animations. Below are some samples of my work.</p><br>
 <p>Please click (+) button to quickly view and learn more.</p>
         </div>
 
@@ -556,6 +556,8 @@
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
                 <p>Secaucus, New Jersey</p>
+		<p>&nbsp;</p>
+
               </div>
 
             </div>
@@ -566,6 +568,7 @@
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>mhosma24@yahoo.com</p>
+		<p>&nbsp;</p>
               </div>
 
             </div>
@@ -577,6 +580,7 @@
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>201.618.8295</p>
+		<p>&nbsp;</p>
               </div>
 			</div>
 
