--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <h4>Location:</h4>
                 <p>Secaucus, New Jersey</p>
 		<p>&nbsp;</p>
-
+		<p>&nbsp;</p>
               </div>
 
             </div>
@@ -568,6 +568,7 @@
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>mhosma24@yahoo.com</p>
+		<p>&nbsp;</p>
 		<p>&nbsp;</p>
               </div>
 
@@ -580,6 +581,7 @@
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>201.618.8295</p>
+		<p>&nbsp;</p>
 		<p>&nbsp;</p>
               </div>
 			</div>
