--- a/packaging-details.html
+++ b/packaging-details.html
@@ -62,7 +62,7 @@
 			
 		  <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>Posters</h3>
+              <h3>Packaging</h3>
               <ul>
                 <li><strong>Role</strong>: Creative Direction, Package Design, Logo Design,&nbsp; Print Production</li>
 				<li>&nbsp;</li>
