--- a/h2o-emails-details.html
+++ b/h2o-emails-details.html
@@ -58,7 +58,7 @@
 			
 		  <div class="col-lg-11">
             <div class="portfolio-info">
-              <h3>H2O Direct E-mails</h3>
+              <h3>H2O Wireless E-mails</h3>
               <ul>
                 <li><strong>Role</strong>: Creative Direction, Graphic Designer, Digital Assets, Front-End Development (HTML, CSS, Javascript)</li>
 				<li>&nbsp;</li>
