--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 		<a href="https://vimeo.com/mhosma" class="vimeo"><i class="bx bxl-vimeo"></i></a>
       </div>
       <div class="copyright">
-        &copy; 2024 <strong><span>images unlimited, inc</span></strong>. michael henrick osma design & art. all rights reserved
+        &copy; 2024 <strong><span>Images Unlimited, Inc</span></strong>. Michael Henrick Osma Design. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
