--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Over the years, I have had the opportunity to work on many exciting projects in different mediums including print &amp; digital collaterals, websites, e-mails, videos and animations. Below are some samples of my work.</p><br>
+          <p>Over the years, I have had the opportunity to work on many exciting projects in different mediums including print &amp; digital collaterals, websites, e-mails, videos and animations. Below are some samples of my work.</p>
+          <br>
 <p>Please click (+) button to quickly view and learn more.</p>
         </div>
 
@@ -402,6 +403,32 @@
             </div>
           </div>
 			
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
+            <div class="portfolio-wrap">
+              <img src="assets/img/preview/h2o-amazon-product-intro-preview.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>H2O Amazon Product Intro</h4>
+                <p>Animation</p>
+                <div class="portfolio-links">
+                  <a href="https://mhosma.github.io/assets/videos/h2o-most-lte-data-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+			
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
+            <div class="portfolio-wrap">
+              <img src="assets/img/preview/h2o-most-lte-data-for-30-16x9.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>H2O Amazon Product Intro</h4>
+                <p>Animation</p>
+                <div class="portfolio-links">
+                  <a href="https://mhosma.github.io/assets/videos/h2o-most-lte-data-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+			
 		  <div class="col-lg-4 col-md-6 portfolio-item filter-digital">
             <div class="portfolio-wrap">
               <img src="assets/img/preview/h2o-2x-data-banner-preview.jpg" class="img-fluid" alt="">
@@ -423,6 +450,19 @@
                 <p>Digital</p>
                 <div class="portfolio-links">
                   <a href="h2o-emails-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Websites &amp; Banners Details"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+			
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-animation">
+            <div class="portfolio-wrap">
+              <img src="assets/img/preview/puretalk-stop-freezing-preview.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>PureTalk Stop Freezing</h4>
+                <p>Animation</p>
+                <div class="portfolio-links">
+                  <a href="https://mhosma.github.io/assets/videos/puretalk-stop-freezing-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -497,7 +537,7 @@
 			<div class="resume-item">
               <h4>Graphic Artist</h4>
               <h5>1998 - 1999</h5>
-              <p><em>Galvanic Printing &amp; Plate, Inc.  - Moonachie, NJ</em></p>
+              <p><em>Galvanic Printing &amp; Plate Company  - Moonachie, NJ</em></p>
               <ul>
                 <li>Created and re-created original artwork, page layouts, logos, labels and packaging from digital production to final pre-press output.</li>
                 <li>Managed all work done by printers and other vendors domestically as well as in Southeast Asia.</li>
@@ -556,8 +596,7 @@
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
                 <p>Secaucus, New Jersey</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
+				<p>&nbsp;</p>
               </div>
 
             </div>
@@ -568,8 +607,7 @@
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>mhosma24@yahoo.com</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
+				<p>&nbsp;</p>
               </div>
 
             </div>
@@ -581,8 +619,7 @@
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
                 <p>201.618.8295</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
+				<p>&nbsp;</p>
               </div>
 			</div>
 
@@ -603,7 +640,7 @@
 		<a href="https://vimeo.com/mhosma" class="vimeo"><i class="bx bxl-vimeo"></i></a>
       </div>
       <div class="copyright">
-        &copy; 2024 <strong><span>Images Unlimited, Inc</span></strong>. Michael Henrick Osma Design. All Rights Reserved
+        &copy; 2024 <strong><span>Images Unlimited Inc</span></strong>. Michael Henrick Osma Design. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
