--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 <h4>H2O Amazon Product Intro</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
-                  <a href="https://mhosma.github.io/assets/videos/h2o-most-lte-data-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                  <a href="https://mhosma.github.io/assets/videos/h2o-amazon-product-intro-1080x1080.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -420,7 +420,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/preview/h2o-most-lte-data-for-30-16x9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>H2O Amazon Product Intro</h4>
+                <h4>H2O Most LTE Data for $30</h4>
                 <p>Animation</p>
                 <div class="portfolio-links">
                   <a href="https://mhosma.github.io/assets/videos/h2o-most-lte-data-for-30-16x9.mp4" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
