--- a/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
+++ b/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
@@ -27,7 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="https://mhosma.github.io/assets/css/style.css" rel="stylesheet">
 	
-  <link href="../../html-animations/adp-mas-january-animations/css/styles-animations.css" rel="stylesheet">
+  <link href="https://mhosma.github.io/assets/css/styles-animations.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume
