--- a/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
+++ b/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
@@ -43,7 +43,7 @@
   <main id="main">
 
     <section id="portfolio-details" class="portfolio-details">
-    <div class="contentwrap">
+    <div class="container">
 		
 <div class="row gy-4">
 	
