--- a/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
+++ b/assets/html-animations/adp-what-is-hro-animations/adp-what-is-hro-animations-details.html
@@ -27,6 +27,8 @@
   <!-- Template Main CSS File -->
   <link href="https://mhosma.github.io/assets/css/style.css" rel="stylesheet">
 
+  <link href="https://mhosma.github.io/assets/css/styles-animations.css" rel="stylesheet">
+
   <!-- =======================================================
   * Template Name: MyResume
   * Updated: Jan 29 2024 with Bootstrap v5.3.2
@@ -133,7 +135,7 @@
   <!-- Template Main JS File -->
   <script src="https://mhosma.github.io/assets/js/main.js"></script>
 
-  <script src="../../html-animations/adp-mas-january-animations/js/animations.js"></script>
+  <script src="https://mhosma.github.io/assets/js/animations.js"></script>
 
 </body>
 
